--- a/public/index.html
+++ b/public/index.html
@@ -85,347 +85,12 @@
         <!-- Dynamic Investment Constainer for Content-->
       </div>
     </div>
-
-    <button type="submit">Generate PDF</button>
+    <button type="button" id="generate-json">Generate JSON</button>
+    <button type="button" id="generate-pdf">Generate PDF</button>
+    <!--<input type="file" id="load-json" style="display: none;" />-->
+    <button type="button" id="load-json">Load JSON</button>
   </form>
 
-  <script>
-    /** ==========================
-     *  Dynamic Equipment Section
-     ========================== **/
-    /*function addEquipSection() {
-      const section = document.getElementById('equipment-section');
-      const equipDiv = document.createElement('div');
-      equipDiv.className = 'nested-section';
-      equipDiv.innerHTML = `
-        <label>Room Name: <input type="text" name="equipRoomName" placeholder="Room Name" required /></label>
-        <div class="equip-items"></div>
-        <button type="button" onclick="addEquipItem(this)">Add Item</button>
-        <button type="button" onclick="this.parentNode.remove()">Remove Room</button>
-      `;
-      section.appendChild(equipDiv);
-    }*/
-    function addEquipSection() {
-        const section = document.getElementById('equipment-section');
-        const equipDiv = document.createElement('div');
-        equipDiv.className = 'nested-section equip-room'; // Added 'equip-room' class
-        equipDiv.innerHTML = `
-            <label>Room Name: <input type="text" name="equipRoomName" placeholder="Room Name" required /></label>
-            <div class="equip-items"></div>
-            <button type="button" onclick="addEquipItem(this)">Add Item</button>
-            <button type="button" onclick="this.parentNode.remove()">Remove Room</button>
-        `;
-        section.appendChild(equipDiv);
-    }
-
-    function addEquipItem(button) {
-      const container = button.previousElementSibling;
-      const itemDiv = document.createElement('div');
-      itemDiv.innerHTML = `
-        <label>Item: <input type="text" name="equipItem" required /></label>
-        <button type="button" onclick="this.parentNode.remove()">Remove Item</button>
-      `;
-      container.appendChild(itemDiv);
-    }
-
-    /** ==========================
-     *  Dynamic Summary Section
-     ========================== **/
-    function addSummarySolution() {
-      const container = document.getElementById('summary-solutions');
-      const solutionDiv = document.createElement('div');
-      solutionDiv.className = 'nested-section';
-      solutionDiv.innerHTML = `
-        <label>Solution: <input type="text" name="summarySolution" required /></label>
-        <button type="button" onclick="this.parentNode.remove()">Remove Solution</button>
-      `;
-      container.appendChild(solutionDiv);
-    }
-
-    /** ==========================
-     *  Dynamic Investment Section
-     ========================== **/
-    /*function addInvestSection() {
-      const section = document.getElementById('investment-section');
-      const investDiv = document.createElement('div');
-      investDiv.className = 'nested-section';
-      investDiv.innerHTML = `
-        <label>Section Name: <input type="text" name="investSectionName" required /></label>
-        <div class="invest-items"></div>
-        <button type="button" onclick="addInvestItem(this)">Add Item</button>
-        <label>Price: <input type="text" name="investPrice" /></label>
-        <button type="button" onclick="this.parentNode.remove()">Remove Section</button>
-      `;
-      section.appendChild(investDiv);
-    }*/
-
-    /*function addInvestSection() {
-        const section = document.getElementById('investment-section');
-        const investDiv = document.createElement('div');
-        investDiv.className = 'nested-section invest-section'; // Added 'invest-section' class
-        investDiv.innerHTML = `
-            <label>Section Name: <input type="text" name="investSectionName" required /></label>
-            <div class="invest-items"></div>
-            <button type="button" onclick="addInvestItem(this)">Add Item</button>
-            <label>Price: <input type="text" name="investPrice" /></label>
-            <button type="button" onclick="this.parentNode.remove()">Remove Section</button>
-        `;
-        section.appendChild(investDiv);
-    }
-
-    function addInvestItem(button) {
-      const container = button.previousElementSibling;
-      const itemDiv = document.createElement('div');
-      itemDiv.innerHTML = `
-        <label>Item: <input type="text" name="investItem" required /></label>
-        <button type="button" onclick="this.parentNode.remove()">Remove Item</button>
-      `;
-      container.appendChild(itemDiv);
-    }*/
-
-    let currentDragElement = null;
-
-    /** ==========================
-     * Add New Investment Section
-     ========================== **/
-    /*function addInvestSection() {
-      const container = document.getElementById('investment-container');
-      const investDiv = document.createElement('div');
-      investDiv.className = 'nested-section invest-section';
-      investDiv.setAttribute('draggable', true); // Enable drag-and-drop
-      investDiv.innerHTML = `
-        <label>Section Name: <input type="text" name="investSectionName" required /></label>
-        <div class="invest-items"></div>
-        <button type="button" onclick="addInvestItem(this)">Add Item</button>
-        <label>Price: <input type="text" name="investPrice" /></label>
-        <button type="button" onclick="this.parentNode.remove()">Remove Section</button>
-      `;
-
-      // Add drag-and-drop event listeners
-      investDiv.addEventListener('dragstart', (e) => {
-        currentDragElement = investDiv;
-        investDiv.style.opacity = '0.5'; // Highlight dragging
-      });
-
-      investDiv.addEventListener('dragend', () => {
-        currentDragElement.style.opacity = '1'; // Remove highlight
-        currentDragElement = null;
-      });
-
-      investDiv.addEventListener('dragover', (e) => {
-        e.preventDefault(); // Allow dropping
-        const target = e.target.closest('.invest-section');
-        if (target && target !== currentDragElement) {
-          container.insertBefore(currentDragElement, target.nextSibling);
-        }
-      });
-
-      container.appendChild(investDiv);
-    }*/
-
-    /** ==========================
-   * Add New Investment Section
-   ========================== **/
-  function addInvestSection(name = "", items = [], price = "") {
-    const container = document.getElementById("investment-container");
-    if (!container) {
-      console.error("Investment container not found!");
-      return;
-    }
-
-    const investDiv = document.createElement("div");
-    investDiv.className = "nested-section invest-section";
-    investDiv.setAttribute("draggable", true); // Enable drag-and-drop
-    investDiv.innerHTML = `
-      <label>Section Name: <input type="text" name="investSectionName" value="${name}" required /></label>
-      <div class="invest-items">
-        ${items
-          .map(
-            (item) => `
-          <div>
-            <label>Item: <input type="text" name="investItem" value="${item}" required /></label>
-            <button type="button" onclick="this.parentNode.remove()">Remove Item</button>
-          </div>
-        `
-          )
-          .join("")}
-      </div>
-      <button type="button" onclick="addInvestItem(this)">Add Item</button>
-      <label>Price: <input type="text" name="investPrice" value="${price}" /></label>
-      ${name !== "Freight" ? '<button type="button" onclick="this.parentNode.remove()">Remove Section</button>' : ""}
-    `;
-
-  investDiv.addEventListener("dragstart", (e) => {
-    currentDragElement = investDiv;
-    investDiv.style.opacity = "0.5"; // Highlight dragging
-  });
-
-  investDiv.addEventListener("dragend", () => {
-    currentDragElement.style.opacity = "1"; // Remove highlight
-    currentDragElement = null;
-  });
-
-  investDiv.addEventListener("dragover", (e) => {
-    e.preventDefault(); // Allow dropping
-    const container = document.getElementById("investment-container");
-    const target = e.target.closest(".invest-section");
-
-    if (target && target !== currentDragElement) {
-      // Insert before the valid target
-      container.insertBefore(currentDragElement, target);
-    } else if (!target) {
-      // If no target, move to the top of the container
-      container.insertBefore(currentDragElement, container.firstChild);
-    }
-  });
-
-    container.appendChild(investDiv);
-  }
-
-  /** ==========================
-   * Add New Item to Investment Section
-   ========================== **/
-  function addInvestItem(button) {
-    const container = button.previousElementSibling;
-    const itemDiv = document.createElement("div");
-    itemDiv.innerHTML = `
-      <label>Item: <input type="text" name="investItem" required /></label>
-      <button type="button" onclick="this.parentNode.remove()">Remove Item</button>
-    `;
-    container.appendChild(itemDiv);
-  }
-
-    /** ==========================
-     * Add New Item to Investment Section
-     ========================== **/
-    function addInvestItem(button) {
-      const container = button.previousElementSibling;
-      const itemDiv = document.createElement('div');
-      itemDiv.innerHTML = `
-        <label>Item: <input type="text" name="investItem" required /></label>
-        <button type="button" onclick="this.parentNode.remove()">Remove Item</button>
-      `;
-      container.appendChild(itemDiv);
-    }
-
-
-  document.addEventListener("DOMContentLoaded", () => {
-  // Add default "Freight" section
-    addInvestSection("Freight", ["SHIPPER PREPAYS FREIGHT – ADDS TO CUSTOMER INVOICE", "Due to volatility in freight charges, the shipping cost provided on this quote is an ESTIMATE only. Freight costs and the number of truckloads may change. The actual freight cost will be charged at the time of shipment OR on the final invoice."], ""); // Predefined items and empty price
-  });
-    /** ==========================
- * Form Submission
- ========================== **/
-document.getElementById('pdf-form').addEventListener('submit', async (e) => {
-  e.preventDefault();
-
-  const formData = new FormData(e.target);
-
-  const data = {
-    title: formData.get('title'),
-    author: formData.get('author'),
-    customer: formData.get('customer'),
-    address: formData.get('address'),
-    city: formData.get('city'),
-    state: formData.get('state'),
-    zip: formData.get('zip'),
-    extension: formData.get('extension'),
-    cell: formData.get('cell'),
-    quantity: formData.get('quantity'),
-    carriage: formData.get('carriage'),
-    quote: formData.has('quote'),
-    summaryBool: formData.has('summaryBool'),
-    imgpath: formData.get('imgpath'),
-    equip: {},
-    summary: { Objective: formData.get('summaryObjective'), Solutions: [] },
-    invest: {}
-  };
-
-  /** ==========================
-   * Process Equipment Section (Dynamic)
-   ========================== **/
-  const equipSections = document.querySelectorAll('.equip-room');
-  equipSections.forEach((section) => {
-    const roomName = section.querySelector('[name="equipRoomName"]').value.trim();
-    if (roomName) {
-      const items = Array.from(
-        section.querySelectorAll('[name="equipItem"]')
-      )
-        .map((item) => item.value.trim())
-        .filter((item) => item);
-      if (items.length > 0) {
-        data.equip[roomName] = items;
-      }
-    }
-  });
-
-  /** ==========================
-   * Process Summary Section
-   ========================== **/
-  document.querySelectorAll('[name="summarySolution"]').forEach((input) => {
-    const solution = input.value.trim();
-    if (solution) {
-      data.summary.Solutions.push(solution);
-    }
-  });
-
-  /** ==========================
-   * Process Investment Section (Dynamic)
-   ========================== **/
-  const investSections = document.querySelectorAll('.invest-section');
-  investSections.forEach((section) => {
-    const sectionName = section.querySelector('[name="investSectionName"]').value.trim();
-    if (sectionName) {
-      const items = Array.from(
-        section.querySelectorAll('[name="investItem"]')
-      )
-        .map((item) => item.value.trim())
-        .filter((item) => item);
-
-      const priceInput = section.querySelector('[name="investPrice"]');
-      const price = priceInput && priceInput.value.trim() ? priceInput.value : null;
-
-      if (items.length > 0 || price) {
-        data.invest[sectionName] = {
-          items: items,
-          price: price || ""
-        };
-      }
-    }
-  });
-
-  console.log('Final Data Before Sending:', JSON.stringify(data, null, 2));
-
-  try {
-    const response = await fetch('/generate-pdf', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(data)
-    });
-
-    if (response.ok) {
-      const blob = await response.blob();
-      const pdfUrl = URL.createObjectURL(blob);
-
-      const a = document.createElement('a');
-      a.href = pdfUrl;
-      a.download = 'generated.pdf';
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-
-      URL.revokeObjectURL(pdfUrl);
-      alert('PDF generated successfully!');
-    } else {
-      console.error('PDF generation failed:', await response.text());
-      alert('Failed to generate PDF');
-    }
-  } catch (error) {
-    console.error('Error submitting form:', error);
-    alert('An error occurred while generating the PDF.');
-  }
-});
-
-  </script>
+  <script type="text/javascript" src="/helpers/formScript.js"></script>
 </body>
 </html>
